--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -42,6 +42,9 @@ jobs:
         run: npm install
       - name: Build with Next.js
         run: npm run build
+        env:
+          USE_CUSTOM_DOMAIN: 'true'  # 使用自定义域名时设置为 true
+          NODE_ENV: 'production'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
